# sshdance

./: .gitignore  Cargo.toml  README  README.md  TODO.md  flake.nix
examples/asteroids/: Cargo.toml
examples/asteroids/src/: main.rs
examples/hello/: Cargo.toml
examples/hello/src/: main.rs
examples/intro/: Cargo.toml
examples/intro/src/: main.rs
examples/panic/: Cargo.toml
examples/panic/src/: main.rs
src/: client.rs  error.rs  handle.rs  lib.rs  site.rs  util.rs
src/api/: mod.rs  term.rs  utils.rs
src/internal/: mod.rs  sync_sink.rs  term.rs
template/: .gitignore  Cargo.toml  README.md  flake.nix
template/src/: main.rs
