[workspace]

members = [
    "examples/intro",
    "examples/asteroids",
    "examples/panic",
]

[package]
name = "sshdance"
version = "0.2.1"
edition = "2021"
license = "MPL-2.0"
description = "A simple SSH TUI-application framework"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
crossterm = { version = "0.29.0", features = ["event-stream"] }
russh = "0.51.1"
# too tired to enumare all features :3
tokio = { version = "1.44.2", features = [ "rt", "net", "sync", "fs" ]}
ratatui = { version = "=0.30.0-alpha.0", features = [ "unstable-backend-writer" ]}
tracing = "0.1.41"
ed25519-dalek = "2.1.1"
replace_with = "0.1.7"
tracing-futures = { version = "0.2.5", features = [ "tokio" ] }
# Fuck you russh-keys
rand_core = { version = "0.6.4", features = ["getrandom", "std"] }