[workspace]

members = [
    "examples/intro",
    "examples/asteroids", "examples/hello",
]

[package]
name = "sshdance"
version = "0.3.0"
edition = "2021"
license = "MPL-2.0"
description = "A simple SSH TUI-application framework"

[dependencies]
#TODO remove in favour of termwiz
crossterm = { version = "0.29.0", features = ["event-stream"] }
russh = "0.56.0"
tokio = { version = "1.49.0", features = [ "rt", "net", "sync", "fs" ]}
ratatui = { version = "0.30.0", features = [ "unstable-backend-writer" ]}
tracing = "0.1.44"
thiserror = "2.0.17"
termwiz = "0.23.3"
rand_core = "0.6.4"
