[package]
name = "asteroids"
version = "0.1.0"
edition = "2021"

[dependencies]
sshdance = { path = "../../" }
tokio = { version = "1.48.0", features = ["full"]}
ratatui = { version = "0.30.0", features = [ "unstable-backend-writer" ]}
async-trait = "0.1.89"
rand = "0.9.2"
crossterm = "0.29.0"
tracing-subscriber = "0.3.22"
tracing = "0.1.44"

[profile.release]
debug = true
