[package]
name = "intro"
version = "0.1.0"
edition = "2021"

[dependencies]
sshdance = { path = "../../" }
tokio = { version = "1.44.2", features = ["full"]}
ratatui = { version = "=0.30.0-alpha.0", features = [ "unstable-backend-writer" ]}
async-trait = "0.1.88"
anyhow = "1.0.98"
rand = "0.9.1"
crossterm = "0.29.0"
tracing-subscriber = "0.3.19"

[profile.release]
debug = true
